...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Public Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nL7-IR-wjL">
                                <rect key="frame" x="87" y="270" width="240" height="42"/>
                                <accessibility key="accessibilityConfiguration" identifier="register_name_placeholder"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="240" id="34F-mS-Mvy"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Join my group Meeting in TICE at https://tice.app/group/ICHH-ABEM-MIRDAS-AUSGED-ACHT#SECRET" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit=
                                                <rect key="frame" x="20" y="20" width="334" height="64.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="invite_body">
                                                    <accessibilityTraits key="traits" link="YES" staticText="YES"/>
                                                </accessibility>
...
                        <barButtonItem key="rightBarButtonItem" title="Done" id="qIt-pf-KbO" customClass="LocalizableBarButtonItem" customModule="TICE" customModuleProvider="target">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="invite_done"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                                        <rect key="frame" x="257" y="74" width="64" height="64"/>
                                        <color key="backgroundColor" name="HighlightBackground"/>
                                        <accessibility key="accessibilityConfiguration" identifier="group_chat"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="64" id="L1W-oU-fLb"/>
...
                        <barButtonItem key="rightBarButtonItem" title="Continue" style="done" id="wBy-LW-uFx" customClass="LocalizableBarButtonItem" customModule="TICE" customModuleProvider="target">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="createGroup_done"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                                                            </userDefinedRuntimeAttribute>
                                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                                            <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="register_register"/>
                                                        </userDefinedRuntimeAttributes>
                                                        <connections>
...
