...
import UIKit
import ChattoAdditions

class TextMessageViewModel: TextMessageViewModelProtocol {
    let text: String
    let cellAccessibilityIdentifier: String = "app.tice.chat.textMessage.cell"
    let bubbleAccessibilityIdentifier: String = "app.tice.chat.textMessage.bubble"

    public let messageViewModel: MessageViewModelProtocol

    init(text: String, messageViewModel: MessageViewModelProtocol) {
        self.text = text
        self.messageViewModel = messageViewModel
...
