...
        return Form()
        +++ Section()
        <<< SwitchRow(Row.startLocationSharing.rawValue) { row in
            row.title = L10n.CreateGroup.StartLocationSharing.title
            row.value = true
            row.cellSetup { cell, _ in
                cell.switchControl.accessibilityIdentifier = "createGroup_startLocationSharing"
            }
        }
        +++ Section()
        <<< TextRow(Row.name.rawValue) { row in
            row.title = L10n.CreateGroup.Basic.name
            row.placeholder = nameSupplier.groupNameByOwner(owner: signedInUser.userId)
...
