...
        return { [weak self] in
            self?.didTapCreateGroup()
        }
    }
    
    var largeButtonAccessibilityIdentifier: String? {
        return "groups_add"
    }
    
    var mainNavigationController: MainNavigationController {
        // swiftlint:disable:next force_cast
        navigationController as! MainNavigationController
    }
...
