"TICE" = "TICE";
"register_welcome" = "Welcome to";
"register_name_title" = "Your name as seen by others:";
"register_name_placeholder" = "Your Name";
"register_name_emptyError" = "Empty names are not allowed";
"register_register" = "Let’s Go";
"teams_team_invited" = "Invited";
"teams_team_meetingUp" = "Meeting Up";
"teams_team_description" = "%@ Persons";
"teams_createTeam" = "Create a new group";
"teams_settings" = "Settings";
"teams_title" = "Groups";
...
"team_startLocationSharing_message" = "Your location will be shared with all members of the group.";
"team_stopLocationSharing_title" = "Stop location sharing?";
"team_stopLocationSharing_message" = "Other members will not see your location anymore.";
"group_member_admin" = "Leader";
"group_member_member" = "Member";
"group_locationSharing_active" = "Shares their location";
"team_info" = "Info";
"team_confirmLocationSharing_title" = "Share Location?";
"team_confirmLocationSharing_body" = "This will share your location with everyone in the group. All group members will be notified.";

/*TIME AGO*/
"timeAgo_year_one" = "1 year ago";
"timeAgo_year_mutiple" = "%@ years ago";
...
"createMeetup_group_name_placeholder" = "Meeting";
"createMeetup_group_accessibleBy" = "Accessible by";
"createMeetup_group_modifiableBy" = "Modifiable by";
"createMeetup_meetingPoint_title" = "Meeting Point";
"createMeetup_meetingPoint_header" = "Meeting Point";
"createGroup_title" = "Create Group";
"createGroup_done" = "Continue";
"createGroup_basic_name" = "Group Name";
"createGroup_basic_name_placeholder" = "Meeting";
"createGroup_permissions_header" = "Permissions";
"createGroup_permissions_accessibleBy" = "Accessible by";
"joinMode_open" = "Shared Link";

/*Fuzzy*/
...
"joinGroup_permissions_modifiableBy" = "Modifiable by";
"joinGroup_participation_join" = "Join";
"changeGroupName_title" = "Change Group Name";
"changeGroupName_name_title" = "Name";
"invite_title" = "Invite People";
"invite_description" = "Invite people by sharing this link, its all they need to join your group.";
"invite_done" = "Done";
"invite_invitation" = "Join %@ and meet up with the secure TICE app or directly in your browser. Tap here: %@";

/*GENERAL*/
"alert_ok" = "OK";
"alert_cancel" = "Cancel";
"general_back" = "Back";
...
